@@ -4,6 +4,7 @@ use t::Helper;
 plan skip_all => 'cpanm CSS::Sass' unless eval 'use CSS::Sass 3.3.0;1';
 
 my $t = t::Helper->t(pipes => [qw(Sass Css)]);
+
 $t->app->asset->process('app.css' => ('sass-one.sass', 'sass-two.scss'));
 $t->get_ok('/asset/5660087922/sass-one.css')->status_is(404, 'not yet compiled');
 
@@ -29,6 +30,9 @@ $t->get_ok('/')->status_is(200)
 
 $t->get_ok('/asset/0dfb452e32/sass-two.css')->status_is(200)
   ->content_like(qr{body\W+background:\s*black}s);
+
+$t = t::Helper->t(pipes => [qw(Css Fetch)]);
+is_deeply($t->app->asset->store->_db, {}, 'nothing was stored in db');
 
 done_testing;
 
