@@ -8,6 +8,8 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
  - Removed deprecated method mtime() from AssetPack::Asset
  - Removed deprecated method start_range() from AssetPack::Asset
  - Removed deprecated method tag_helper() from AssetPack::Asset
+ - Can prevent AssetPack::Store from writing assetpack.db while developing
+   with MOJO_ASSETPACK_LAZY=1 (EXPERIMENTAL)
  - Will not store "mtime" in assetpack.db
 
 1.44 2017-05-21T23:02:46+0200
